--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 // --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Marker: den Code erstelle ich direkt in meinem Google Sheet --> zum aendern einfach die gesamte Code-Spalte kopieren und statt folgendem Inhalt einfuegen:
 
-var ar_cinior = L.marker([21.166484, -31.464844], {icon: mm3}).bindPopup('<b>Eryn <br> uff Cinior</b> <br> alles was du wissen musst <br> findest du hier').bindTooltip('Eryn Cinior', tooltipOptions).addTo(map);
+var ar_cinior = L.marker([21.166484, -31.464844], {icon: mm3}).bindPopup('<b>Eryn Cinior</b>').bindTooltip('Eryn Cinior', tooltipOptions).addTo(map);
 var ar_gulthias = L.marker([20.961440, -29.794922], {icon: mm3}).bindPopup('<b>Eryn Gulthias</b>').bindTooltip('Eryn Gulthias', tooltipOptions).addTo(map);
 var de_eisenhammer = L.marker([24.226929, -32.805176], {icon: mm1}).bindPopup('<b>Eisenhammer-Mine</b>').bindTooltip('Eisenhammer-Mine', tooltipOptions).addTo(map);
 var de_eisenklamm = L.marker([22.836946, -31.420898], {icon: mm1}).bindPopup('<b>Eisenklamm</b>').bindTooltip('Eisenklamm', tooltipOptions).addTo(map);
