--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 // Marker: den Code erstelle ich direkt in meinem Google Sheet --> zum aendern einfach die gesamte Code-Spalte kopieren und statt folgendem Inhalt einfuegen:
 
 var ar_cinior = L.marker([21.166484, -31.464844], {icon: mm3}).bindTooltip('?', tooltipOptions).addTo(map);
-var ar_gulthias = L.marker([20.961440, -29.794922], {icon: mm3}).bindPopup("<b>Eryn Gulthias</b> <br> <a href='https://github.com/Stafter/Endovier/wiki/Eryn-Gulthias#die-neue-passstra%C3%9Fe' target="_blank">Die neue Passstraße</a> <br> <a href='https://github.com/Stafter/Endovier/wiki/Eryn-Gulthias#arnad-eledhrim---das-reich-der-elben' target="_blank">Arnad Eledhrim - das Reich der Elben</a>").bindTooltip('Eryn Gulthias', tooltipOptions).addTo(map);
+var ar_gulthias = L.marker([20.961440, -29.794922], {icon: mm3}).bindPopup("<b>Eryn Gulthias</b> <br> <a href='https://github.com/Stafter/Endovier/wiki/Eryn-Gulthias#die-neue-passstra%C3%9Fe' target='_blank'>Die neue Passstraße</a> <br> <a href='https://github.com/Stafter/Endovier/wiki/Eryn-Gulthias#arnad-eledhrim---das-reich-der-elben' target='_blank'>Arnad Eledhrim - das Reich der Elben</a>").bindTooltip('Eryn Gulthias', tooltipOptions).addTo(map);
 var de_eisenhammer = L.marker([24.226929, -32.805176], {icon: mm1}).bindPopup("<b>Eisenhammer-Mine</b>").bindTooltip('Eisenhammer-Mine', tooltipOptions).addTo(map);
 var de_eisenklamm = L.marker([22.836946, -31.420898], {icon: mm1}).bindPopup("<b>Eisenklamm</b>").bindTooltip('Eisenklamm', tooltipOptions).addTo(map);
 var de_fisker = L.marker([23.301901, -32.519531], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
