--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@ var tbd_3 = L.marker([3.491489, -26.916504], {icon: mm0}).bindTooltip('?', toolt
 var tbd_4 = L.marker([-3.118576, -27.949219], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
 var tbd_5 = L.marker([-5.397273, -35.48584], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
 
+// --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+//Popup: Größe vom Popup wird (für die hier angeführten Marker) dynamisch angepasst, sobald ein Spoiler im Popup geöffnet oder geschlossen wird! (Laut chatGPT, mal sehen, ob es klappt)
+
+ar_cinior.on('popupopen', function() {
+    var popup = ar_cinior.getPopup();
+    var details = popup.getElement().querySelector('details');
+    details.addEventListener('toggle', function() {
+        popup.update();
+    });
+});
+
+
     </script>
   </body>
 </html>
