--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ var tbd_11 = L.marker([, ], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(
 // --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // Map-Prompt: Marker, der anzeigt, wo die neue Map-Prompt zu erstellen ist. Wenn etwas gut genug ist, dann wird es in die Karte integriert!
 
-var map_prompt_1 = L.marker([15.390136, -33.33252], {icon: mm1}).bindTooltip('Map Prompt #1', tooltipOptions).addTo(map);
+var map_prompt_1 = L.marker([15.390136, -33.33252]).bindTooltip('Map Prompt #1', tooltipOptions).addTo(map);
 
 
 // --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
