--- a/index.html
+++ b/index.html
@@ -129,11 +129,22 @@ var tbd_3 = L.marker([3.491489, -26.916504], {icon: mm0}).bindTooltip('?', toolt
 var tbd_4 = L.marker([-3.118576, -27.949219], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
 var tbd_5 = L.marker([-5.397273, -35.48584], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
 var prompt_1 = L.marker([15.390136, -33.33252], {icon: mm1}).bindPopup("[Map Prompt #1] <br><br> <b>Was kann an diesem Seeufer entdeckt werden?</b><br>Schau dir diesen Ort auf der Karte an. Stell dir vor, du wanderst hier umher und plötzlich siehst du... <br><br><i> (Bitte ohne ChatGPT)</i>").bindTooltip('Session Prompt', tooltipOptions).addTo(map);
-var tbd_7 = L.marker([, ], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
-var tbd_8 = L.marker([, ], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
-var tbd_9 = L.marker([, ], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
-var tbd_10 = L.marker([, ], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
-var tbd_11 = L.marker([, ], {icon: mm0}).bindTooltip('?', tooltipOptions).addTo(map);
+var ff_cair = L.marker([52.86913, 0.527344], {icon: mm0}).bindPopup("<b>Cair-Isbjörn </b>").bindTooltip('Cair-Isbjörn', tooltipOptions).addTo(map);
+var ff_ythryn = L.marker([54.889246, 2.241211], {icon: mm2}).bindPopup("<b>Ythryn </b>").bindTooltip('Ythryn', tooltipOptions).addTo(map);
+var ff_esthaven = L.marker([50.527397, -0.944824], {icon: mm0}).bindPopup("<b>Esthaven </b>").bindTooltip('Esthaven', tooltipOptions).addTo(map);
+var ff_letzterast = L.marker([53.592505, 2.351074], {icon: mm0}).bindPopup("<b>Die letzte Rast </b>").bindTooltip('Die letzte Rast', tooltipOptions).addTo(map);
+var sk_suul = L.marker([-7.645665, -55.217285], {icon: mm2}).bindPopup("<b>Sû-ûl, unser Licht </b>").bindTooltip('Sû-ûl, unser Licht', tooltipOptions).addTo(map);
+var sk_ruakk = L.marker([-9.362353, -54.536133], {icon: mm1}).bindPopup("<b>Rû-akk, unsere Welle </b>").bindTooltip('Rû-akk, unsere Welle', tooltipOptions).addTo(map);
+var sk_shkib = L.marker([-10.033767, -65.039063], {icon: mm1}).bindPopup("<b>Shk-íb, unser Segel </b>").bindTooltip('Shk-íb, unser Segel', tooltipOptions).addTo(map);
+var sk_yookatel = L.marker([-6.926427, -56.777344], {icon: mm0}).bindPopup("<b>Yò-okatel </b>").bindTooltip('Yò-okatel', tooltipOptions).addTo(map);
+var sk_chemfar = L.marker([-5.156599, -63.149414], {icon: mm0}).bindPopup("<b>Ch-emfar </b>").bindTooltip('Ch-emfar', tooltipOptions).addTo(map);
+var sk_kiimil = L.marker([-11.178402, -57.524414], {icon: mm0}).bindPopup("<b>Ki-imíl </b>").bindTooltip('Ki-imíl', tooltipOptions).addTo(map);
+var sk_aakaba = L.marker([-4.039618, -60.820313], {icon: mm0}).bindPopup("<b>Á-akaba </b>").bindTooltip('Á-akaba', tooltipOptions).addTo(map);
+var sk_puujekk = L.marker([-10.487812, -55.305176], {icon: mm0}).bindPopup("<b>Pû-ûjekk </b>").bindTooltip('Pû-ûjekk', tooltipOptions).addTo(map);
+var sk_suashir = L.marker([-8.037473, -56.601563], {icon: mm0}).bindPopup("<b>Sû-ashír </b>").bindTooltip('Sû-ashír', tooltipOptions).addTo(map);
+var sk_juonkai = L.marker([-9.037003, -63.742676], {icon: mm0}).bindPopup("<b>Jû-onkai </b>").bindTooltip('Jû-onkai', tooltipOptions).addTo(map);
+var sk_brausibb = L.marker([-11.587669, -60.930176], {icon: mm0}).bindPopup("<b>Brá-ûsíbb </b>").bindTooltip('Brá-ûsíbb', tooltipOptions).addTo(map);
+var sk_konglomerat = L.marker([-7.906912, -60.270996], {icon: mm3}).bindPopup("<b>Das Sûûl-Konglomerat </b>").bindTooltip('Das Sûûl-Konglomerat', tooltipOptions).addTo(map);
 
 // --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
